# KAMEL

./: .clang-format  .fortls  .fprettify  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  BACKLOG_EFFICIENT.md  BACKLOG_ORIGINAL.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Data.md  GOLDEN_RECORD_TEST.md  LICENSE  Makefile  README.md  flake.nix  kamel.sh  pytest.ini
KIM/: .gitignore  BACKLOG.md  CMakeLists.txt  Makefile  README.md  demo_config_display.f90  demo_display  demo_display_simple.f90  demo_simple  kim.sh  test_config_display.f90
KIM/cmake/: FetchZeal.cmake
KIM/nmls/: KIM_config.nml  KIM_config_electromagnetic.nml  KIM_config_quadpack_example.nml  README.md
KIM/python/: kim_gui.py
KIM/src/: CMakeLists.txt  CMakeSources.in  kim_main.f90
KIM/tests/: CMakeLists.txt  benchmark_integration.f90  test_ampere_matrices.f90  test_equil_ode_dop853.f90  test_findIndex.f90  test_grid_equidistant.f90  test_integration_methods.f90  test_kim_diagnostics.f90  test_kim_solver.f90  test_kim_solver_em.f90  test_plag_coeff.f90  test_profile_input.f90  test_profile_input_integration.f90  test_quadpack_qagi.f90  test_region_roots_vs_muller.f90  test_root_finding.f90
KiLCA/: .gitignore  CMakeLists.txt  CMakeListsMy.txt  Makefile  README  cmake_install.cmake  code_settings.h.in  kilca.sh
KiLCA/antenna/: antenna.cpp  antenna.h  antenna_equations.f90  antenna_m.f90  antenna_spectrum.f90
KiLCA/background/: back_sett.cpp  back_sett.h  background.cpp  background.h  background_data_m.f90  background_m.f90  calc_back.cpp  calc_back.h  calc_back_slatec.cpp  density_p.f90  density_p_J0.f90  density_p_sergey.f90  eval_back.cpp  eval_back.h  f0moments.f90  f0moments_J0.f90  f0moments_sergey.f90
KiLCA/cmake/: FetchSundials.cmake
KiLCA/config/: antenna_sett.cpp  antenna_sett.h  back_sett.cpp  back_sett.h  eigmode_sett.cpp  eigmode_sett.h  settings.cpp  settings.h
KiLCA/core/: constants.h  constants_m_32bit.f90  constants_m_64bit.f90  core.cpp  core.h  core_data_m.f90  core_m.f90  output_sett.cpp  output_sett.h  output_sett_m.f90  settings.cpp  settings.h  settings_m.f90  shared.cpp  shared.h  shared_m.f90  slatec.h  typedefs.h
KiLCA/eigmode/: calc_eigmode.cpp  calc_eigmode.h  eigmode_sett.cpp  eigmode_sett.h  eigmode_sett_m.f90  eigmode_solve_m.f90  find_eigmodes.cpp
KiLCA/examples/: flre
KiLCA/flre/: flre_sett_m.f90  flre_zone.cpp  flre_zone.h  flre_zone_dispatch.h  flre_zone_m.f90
KiLCA/fortran_modules/: .gitignore  BACKLOG.md  CMakeLists.txt  INTEGRATION_GUIDE.md  KiLCA_Documentation.md  Makefile  PROCEDURE_REFERENCE.md  README.md  SETTINGS_USAGE.md  background.in  bessel_gsl_m.f90  bessel_stubs.f90  build_warnings.txt  hyper1F1.cpp  kilca_adaptive_grid_m.f90  kilca_antenna_m.f90  kilca_background_m.f90  kilca_bdf_solver_m.f90  kilca_complex_m.f90  kilca_complex_m.mod  kilca_conductivity_m.f90  kilca_constants_m.f90  kilca_constants_m.mod  kilca_core_m.f90  kilca_eigensolver_m.f90  kilca_eigtransform_m.f90  kilca_fourier_m.f90  kilca_hypergeometric_basic_m.f90  kilca_hypergeometric_m.f90  kilca_interp_integ_m.f90  kilca_main.f90  kilca_main_utils_m.f90  kilca_maxwell_m.f90  kilca_memory_m.f90  kilca_mode_m.f90  kilca_mode_solver_m.f90  kilca_orthogonalization_m.f90  kilca_physics_m.f90  kilca_plasma_physics_m.f90  kilca_plasma_physics_m_old.f90  (+39 more)
KiLCA/hom_medium/: hmedium.f90  hmedium_zone.cpp  hmedium_zone.h  hmedium_zone_m.f90
KiLCA/imhd/: compressible_flow.cpp  compressible_flow.h  compressible_flow_m.f90  imhd.f90  imhd_zone.cpp  imhd_zone.h  imhd_zone_m.f90  incompressible.cpp  incompressible.h  incompressible_m.f90
KiLCA/interface/: amn_of_r.f90  bessel.f90  dummy.f90  fill_array.cpp  kilca_matrix.f90  make_it  ql-balance_mod.f90  test_interface.f90  wave_code_data_64bit.f90  wave_code_interface.cpp  wave_code_interface.h  wave_code_interface_m.f90
KiLCA/interp/: interp.cpp  interp.h  interp_m.f90  neville_m.f90
KiLCA/io/: CMakeLists.txt  inout.cpp  inout.h  inout_m.f90  namelist.f90  namelist.h
KiLCA/math/: lapack.h  solsubsys.f90  transform.f90  zgeev_tuned.f
KiLCA/mode/: calc_mode.cpp  mode.cpp  mode.h  mode_data_m.f90  mode_m.f90  stitching.f90  stitching.h  transforms.cpp  transforms.h  transforms_dispatch.h  transforms_m.f90  wave_data.cpp  wave_data.h  wave_data_dispatch.h  wave_data_m.f90  zone.cpp  zone.h  zone_dispatch.h  zone_m.f90
KiLCA/post_processing/: eval_form_factors.f90  main_post_proc.cpp  main_post_proc.f90  save_fortran.f90  test_eval_ff.f90  torque_facs.cpp
KiLCA/progs/: main_eig_param.cpp  main_eig_param.f90  main_linear.cpp  main_linear.f90  main_linear.h  progs_common_m.f90
KiLCA/solver/: eigtransform.cpp  eigtransform.h  method.h  rhs_func.cpp  rhs_func.h  solver.cpp  solver.h  solver_a.cpp  solver_m.f90  spar.m
KiLCA/spline/: spline.cpp  spline.h  spline_m.f90
KiLCA/tests/: CMakeLists.txt  kilca_config.nml  simplified_namelist.nml  test_antenna_settings.f90  test_back_sett.f90  test_disp_profiles.f90  test_disp_profiles_fakes.f90  test_eigmode_sett.f90  test_hyper1f1.f90  test_maxwell_eqs_data.f90  test_maxwell_eqs_data_fakes.f90  test_namelist.hpp  test_namelist.nml  test_namelist_full.cpp  (+6 more)
QL-Balance/: .gitignore  CMakeLists.txt  CMakeSources.in  Makefile  README.md  build.sh  ql-balance.sh
python/: Makefile  README.md  constants.py  kimpy.py  pyproject.toml  requirements.txt  setup.py
ql-balance/: .gitignore  Balance.mk_mpi  CMakeLists.txt  README.md
ql-light/: CMakeLists.txt  README.md
src/: CMakeLists.txt  back_quants_mod.f90  basis_transform_kernel.f90  calc_backs.f90  calculate_backs.f90  calculate_equil.f90  cut_off_integration.f90  debye_kernel.f90  equil_mod.f90  generate_k_space_grid.f90  gengrid.f90  grid.f90  grid_mod.f90  integrands.f90  kernel_B.f90  kernel_functions.f90  kernel_mod.f90  kernel_phi.f90  kernel_rho_B.f90  kernel_rho_phi.f90  kim_main.f90  plas_parameter_mod.f90  plasma_disp_func.f90  plasma_parameter.f90  read_profiles.f90  setup_mod.f90  solve_poisson.f90  spline_function.f90  unit_tests.f90
test/: CMakeLists.txt
(+1079 files in other folders)
